[project]
name = "shmarql"
version = "0.63"
description = "A Linked Data publishing platform for semantic web professionals in a hurry."
authors = [{name = "Etienne Posthumus", email = "ep@epoz.org"}]
license = "MIT"
readme = "README.md"
keywords = ["SPARQL", "search", "RDF", "Linked Data"]
requires-python = ">=3.10"
dependencies = [
    "apsw==3.50.3.0",
    "bcrypt==3.2.0",
    "fizzysearch==0.31",
    "markdown>=3.9",
    "mkdocs-material>=9.6.21",
    "monsterui>=1.0.29",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.3.1",
    "pygments>=2.19.2",
    "pyoxigraph>=0.5.0",
    "python-fasthtml>=0.12.29",
    "rdflib>=7.2.1",
    "tree-sitter-sparql==0.1.0",
]

[project.urls]
Homepage = "https://shmarql.com/"
Repository = "https://github.com/epoz/shmarql"

[project.entry-points."pygments.lexers"]
py3 = "shmarql:ShmarqlLexer"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]
